test/classes/jplevyak/union_type_hierarchy-3-error.good
Error: Unresolved call 'f(:D)' (union_type_hierarchy-3-error.chpl:16)
Candidates are:
  f(a: C) (union_type_hierarchy-3-error.chpl:10)
